# adventofcode

./: .gitignore  get_input.py
2022/01/: README.md
2022/01/src/: main.rs
2022/02/: README.md  main.go
2022/03/: README.md  rucksack.py
2022/06/: README.md  tuning.py
2022/6/: tuning.py
2023/01/: trebuchet.py
2023/02/: cube.py
2023/03/: README  x03.cabal
2023/03/app/: Main.hs
2024/01/: .gitignore  exercise.ml  histeria.ml  quicksort.ml  quicksort.py  run.sh
2024/02/: .gitignore  main.ml
2024/03/: main.ml  run.sh
2024/04/: main.ml  main.py
2024/05/: main.zig  run.sh
2024/07/: README  main.s
2024/07/linux/: Makefile  main.s
2024/07/linux-arm64/: main.s  run.bash  run.sh
2024/07/mac/: main.s  run.bash
