cabal-version:      2.4
name:               x03
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dxlnr
maintainer:         daniel.illner@outlook.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README

executable x03
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0,
                      split ^>=0.2.4,
                      regex-compat ^>=0.95.1,
                      regex-tdfa ^>=1.3.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
